--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -36,6 +36,8 @@
   padding: 1em;
   margin-bottom: 1em;
 
+  @include flexbox($dir: column);
+
   @include shadow;
 
   @include mq('sm') {
@@ -117,6 +119,8 @@
 
 /* Project summary within project card */
 .project-summary {
+  @include flexbox($dir: column);
+  flex-grow: 1;
   line-height: 1.4;
   font-size: 1.2em;
 
@@ -125,8 +129,17 @@
     margin: 0.25em 0;
   }
 
+  & > h4 {
+    text-align: center;
+
+    & ~ p {
+
+    }
+  }
+
   & > .modal-trigger {
     display: block;
+    margin-top: auto;
     margin-bottom: 0;
   }
 }
