--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -45,8 +45,10 @@ $about-text-color: #fff;
 // $about-text-color: #555;
 // $about-text-color: $color-secondary;
 
-$main-content-bg-color: $color-secondary;
+// $main-content-bg-color: $color-secondary;
 $main-content-bg-color: $color-primary;
+// $main-content-bg-color: $color-tertiary;
+// $main-content-bg-color: $color-accent;
 
 // $portfolio-heading-color: $color-primary;
 $portfolio-heading-color: $color-secondary;
